--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -15,4 +15,40 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+
+button {
+  border: none;
+  border-radius: none;
+  background-color: white;
+  padding: 10px 40px;
+  font-size: 18px;
+  border: solid 1px;
+}
+
+button:hover,
+button:focus {
+  background-color: white;
+  box-shadow: 2px 2px 2px 1px rgba(106, 106, 109, 0.2);
+}
+
+input {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-right: 5px;
+  font-size: 20px;
+}
+
+span {
+  font-size: 20px;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.timer {
+  display: flex;
+}
+
+.field {
+  padding-right: 10px;
 }
